--- a/styles.css
+++ b/styles.css
@@ -49,14 +49,21 @@ a.active:hover{
     list-style: square;
 }
 #particles-js{
-    top: 0px;
   width: 100%;
     margin: 0;
     border: 0;
     height: 220px;
-    z-index: -1000;
+    z-index: 3;
   background-color: white;
-    background-size: cover;
+}
+#particles-js {
+  top: 0px;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-color: #000000;
+  background-size: cover;
+  z-index: -1000;
 }
 
 .header{
