--- a/style.css
+++ b/style.css
@@ -48,14 +48,18 @@ a.active:hover{
 .updateList{
     list-style: square;
 }
-#particles-js{
+
+#particles-js {
+  top: 0px;
+  height: 100%;
   width: 100%;
-    margin: 0;
-    border: 0;
-    height: 220px;
-    z-index: 3;
-  background-color: white;
+  position: fixed;
+  background-color: #000000;
+  background-size: cover;
+  z-index: -1000;
 }
+
+
 
 .header{
     text-align: center;
