--- a/style.css
+++ b/style.css
@@ -49,14 +49,13 @@ a.active:hover{
     list-style: square;
 }
 
-#particles-js {
-  top: 0px;
-  height: 100%;
+#particles-js{
   width: 100%;
-  position: fixed;
+    margin: 0;
+    border: 0;
+    height: 220px;
+    z-index: 3;
   background-color: white;
-  background-size: cover;
-  z-index: -1000;
 }
 
 
