--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ a.active:hover{
 
 #particles-js {
   top: 0px;
-  height: 100%;
+  height: 50%;
   width: 100%;
   position: fixed;
-  background-color: red;
+  background-color: white;
   z-index: 3;
 }
 
