--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ a.active:hover{
     #quicklink{
         display: none;
     }
-    #particle-js{
+    #particles-js{
         display: none;
     }
 }
