--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
 
 .logo>img{
-    width:30%; 
-    position: absolute; 
-    z-index: 0; 
-    opacity: 0.7;
+    width:24%; 
+    position: absolute;
+    height: inherit;
+    z-index: 5; 
+    opacity: 1;
+   margin-left: 38%;
+    
+}
+.brandlogo{
+    width: 25px;
+    height: inherit;
+}
+.brandlogo:hover{
+    width: 40px;
+    height: 40px;
 }
 .navbar-light {
-    background-image: radial-gradient(rgba(30,400,10,0.8),white) !important; 
+    background-image: radial-gradient(rgba(30,400,10,0.6),rgba(255,255,255,0.2)) !important; 
     border-radius: 5px !important; 
     text-decoration-style: none !important;
     z-index: 5 !important; 
