--- a/style.css
+++ b/style.css
@@ -120,7 +120,32 @@ a.active:hover{
 
 .footer{
     background: rgba(33,32,29,0.9);
+    width: 100%;
+    padding-left: 20px; padding-right: 20px;
 }
+ .quicklink{
+    color: orange; 
+    margin-top: 5%; 
+    margin-left:40px;
+    font-size: 20px;
+}
+
+.contacts{
+    color: orange; 
+    margin-top: 5%; 
+    margin-left:10px;
+    font-size: 20px;
+}
+
+.s_media>li{
+    display: inline;
+    list-style-type: none;
+}
+.copyright{
+    padding: 0;
+    margin:0;
+}
+
 
 @media (min-width: 768px){
 	.dropdown-menu .dropdown-toggle:after{
