--- a/style.css
+++ b/style.css
@@ -130,18 +130,48 @@ a.active:hover{
     margin-left:40px;
     font-size: 20px;
 }
-
+.q_link>li>a{
+    margin:5px;
+    color: aqua;
+}
+.q_link>li>a:hover{
+    text-decoration: none;
+    color: aliceblue;
+}
 .contacts{
     color: orange; 
     margin-top: 5%; 
     margin-left:10px;
     font-size: 20px;
 }
+.email>span:hover{
+    color: aqua !important;
+}
+
 
 .s_media>li{
     display: inline;
     list-style-type: none;
 }
+.copyright{
+    margin:0;
+}
+.copyright>a{
+    color: orange;
+}
+.copyright>a:hover{
+    color: aqua;
+    text-decoration: none;
+}
+.designedBy>a{
+    color: orange;
+    text-decoration: none;
+}
+.designedBy>a:hover{
+    color: aqua;
+    text-decoration: none;
+}
+
 
 
 @media (min-width: 768px){
