--- a/style.css
+++ b/style.css
@@ -215,7 +215,9 @@ a.active:hover{
         height: auto !important;
     }
     .logo>img{
-   margin-left: 20%;
+   margin-left: 32%;
     margin-right: 30%;
-    width: 60%    
+        margin-top: 20%;
+    width: 30%;
+    height: 50%;
 }
